--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^16.10.9",
+    "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "homebridge": "^1.3.5",
-    "nodemon": "^2.0.13",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "eslint": "^8.57.0",
+    "homebridge": "1.6.1",
+    "nodemon": "^3.1.0",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
